--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@ $bg-red: #3A1D41;
 
 $blue: #0EA1FB;
 
-$desktop-size: 600px;
+$desktop-size: 740px;
 
 @mixin desktop {
     @media(min-width: #{$desktop-size}) {
@@ -35,9 +35,23 @@ body {
 }
 
 header {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: $dark-bg-color;
     border-bottom: 1px solid $light-bg-color;
     padding: 3rem 0rem 2rem;
+
+    @media(min-width: 1125px) {
+        flex-direction: row;
+    }
+
+    .logo {
+        @media(max-width: 1125px) {
+            flex: none;
+        }
+    }
 }
 
 footer {
